fix get ranking
