# http-handler/docs/swagger.json
@@ -826,13 +826,11 @@
                         "required": true
                     },
                     {
-                        "description": "Nouveaux scores",
-                        "name": "body",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.CourtRankingRequest"
-                        }
+                        "type": "string",
+                        "description": "Identifiant du sport",
+                        "name": "sport",
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -1301,14 +1299,6 @@
             "properties": {
                 "password": {
                     "type": "string"
-                }
-            }
-        },
-        "models.CourtRankingRequest": {
-            "type": "object",
-            "properties": {
-                "sport": {
-                    "$ref": "#/definitions/models.Sport"
                 }
             }
         },
